# HIFishAuction

./: .replit  app.py  comprehensive_data_dashboard.py  data_manager.py  database.py  demo_data_generator.py  feat_data_extractor.py  fish_auction.db  global_market_analyzer.py  groq_service.py  historical_data_finder.py  initialize_demo_data.py  noaa_data_integration.py  noaa_longline_integration.py  ocean_service.py  pacific_ecosystem_data.py  prediction_model.py  pyproject.toml  replit.md  requirements.txt  scheduler.py  system_initializer.py  test_noaa_integration.py  undercurrent_api_integration.py  utils.py  weather_service.py
.streamlit/: style.css
.vercel/: project.json
attached_assets/: Pasted-Fish-Price-Auction-Data-Sources-1-Honolulu-Retail-Monitoring-Fish-Price-Data-Collection-2016--1755746704857_1755746704858.txt  Pasted-Seasonal-Fish-Patterns-Catch-Cycles-Hawai-i-Longline-Observer-Program-NOAA-PIFSC-Species-s-1755746931703_1755746931704.txt
data/: seasonal_patterns.json  species_data.json
models/: direction_classifier.pkl  feature_columns.pkl  label_encoder.pkl  price_regressor.pkl  scaler.pkl
