[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.1",
    "selenium>=4.35.0",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
]
